--- a/rust/lance/Cargo.toml
+++ b/rust/lance/Cargo.toml
@@ -116,7 +116,7 @@ geo-types = { workspace = true }
 
 
 [features]
-default = ["aws", "azure", "gcp", "oss", "huggingface"]
+default = ["aws", "azure", "cos", "gcp", "oss", "huggingface"]
 fp16kernels = ["lance-linalg/fp16kernels"]
 # Prevent dynamic linking of lzma, which comes from datafusion
 cli = ["dep:clap", "lzma-sys/static"]
@@ -133,6 +133,7 @@ aws = ["lance-io/aws", "dep:aws-credential-types"]
 gcp = ["lance-io/gcp"]
 azure = ["lance-io/azure"]
 oss = ["lance-io/oss"]
+cos = ["lance-io/cos"]
 huggingface = ["lance-io/huggingface"]
 # Enable slow integration tests (disabled by default in CI)
 slow_tests = []
